docs: add 자바 제네릭 docs